--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
 		"autoprefixer": "^10.4.13",
 		"copy-webpack-plugin": "^11.0.0",
 		"css-loader": "^6.7.3",
+		"gsap": "^3.11.5",
 		"iconfont-plugin-webpack": "^1.1.4",
 		"mini-css-extract-plugin": "^2.7.2",
 		"postcss": "^8.4.20",
